# rust_euler

./: .gitignore  Cargo.toml  LICENSE
src/: ex1.rs  ex2.rs  ex2_alt.rs  ex3.rs  ex4.erl  ex4.rs  ex5.rs  ex6.rs  lib.rs
