[package]
name = "euler"
version = "0.1.0"
authors = ["Rajat Vig <rajat.vig@gmail.com>"]

[lib]
name = "helpers"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "ex1"
path = "src/ex1.rs"

[[bin]]
name = "ex2"
path = "src/ex2.rs"

[[bin]]
name = "ex2_alt"
path = "src/ex2_alt.rs"

[[bin]]
name = "ex3"
path = "src/ex3.rs"

[[bin]]
name = "ex4"
path = "src/ex4.rs"

[[bin]]
name = "ex5"
path = "src/ex5.rs"

[[bin]]
name = "ex6"
path = "src/ex6.rs"
